[workspace]
members = [
    "common",
    "components/*",
    "cores/ggc",
    "cores/gga",
    "cores/nds",
    "gamegirl",
    "gamegirl-egui",
    "testing/corebench-egui",
    "testing/flamegraph",
    "testing/gamerunner",
]
resolver = "2"

[profile.release]
debug = true
# lto = true
panic = "abort"
opt-level = 2

[profile.release-unwind]
inherits = "release"
panic = "unwind"

[profile.dev]
opt-level = 1

[workspace.dependencies]
log = "0.4.22"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_arrays = "0.1.0"
arrayvec = "0.7.4"
bitflags = "2.6.0"
modular-bitfield = "0.11"
bitmatch = "0.1.1"
glow = "0.13"
