[workspace]
members = [
    "common",
    "components/*",
    "cores/ggc",
    "cores/gga",
    "cores/nds",
    "gamegirl",
    "gamegirl-egui",
    "testing/corebench-egui",
    "testing/flamegraph",
    "testing/gamerunner",
]
resolver = "2"

[profile.release]
panic = "abort"
opt-level = 3

[profile.release-unwind]
inherits = "release"
panic = "unwind"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-fast]
inherits = "release"
lto = false
opt-level = 2
incremental = true

[profile.dev]
opt-level = 1

[workspace.dependencies]
log = { version = "0.4.27", default-features = false }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_arrays = "0.2.0"
arrayvec = "0.7.6"
bitflags = "2.9.0"
modular-bitfield = "0.11"
bitmatch = "0.1.1"
glow = "0.16"
