[workspace]
members = [
    "common",
    "components/*",
    "cores/ggc",
    "cores/gga",
    "cores/nds",
    "gamegirl",
    "frontends/*",
]
resolver = "2"

[profile.release]
panic = "abort"
opt-level = 3

[profile.release-unwind]
inherits = "release"
panic = "unwind"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release-fast]
inherits = "release"
lto = false
opt-level = 2
incremental = true

[profile.dev]
opt-level = 1

[workspace.dependencies]
log = { version = "0.4.27", default-features = false }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_arrays = "0.2.0"
arrayvec = { version = "0.7.6", default-features = false }
bitflags = "2.9.0"
modular-bitfield = "0.11"
bitmatch = { path = "./components/bitmatch" }
glow = "0.16"
