[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7.4" }
log = "0.4.20"

serde = { version = "1.0.188", features = ["derive", "rc"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
bincode = { version = "1.3.3", optional = true }
zstd = { version = "0.12.4", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.64", features = ["Storage", "Window"] }
base64 = "0.21.4"

[features]
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "dep:bincode",
    "dep:zstd",
    "arrayvec/serde",
    "serde_config",
]
serde_config = ["dep:serde"]
