[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }
arrayvec.workspace = true

bincode = { version = "1.3.3", optional = true }
zstd = { version = "0.13.0", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.66", features = ["Storage", "Window"] }
base64 = "0.21.5"

[features]
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "dep:bincode",
    "dep:zstd",
    "arrayvec/serde",
    "serde_config",
]
serde_config = ["dep:serde"]
