[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
rubato = { version = "0.16", default-features = false }

serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }

bincode = { version = "1.3.3", optional = true }
zstd = { version = "0.13.2", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.72", features = ["Storage", "Window"] }
base64 = "0.22.1"

[features]
serde = ["dep:serde", "dep:serde_arrays", "dep:bincode", "serde_config"]
serde_config = ["dep:serde"]
