[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_arrays = "0.1.0"
bitflags = "1.3.2"
bitmatch = "0.1.1"
bincode = "1.3.3"
zstd = { version = "0.11.2", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
zstd = { version = "0.11.2", default-features = false, features = ["wasm"] }
web-sys = { version = "0.3.57", features = ["Storage", "Window"] }
base64 = "0.13.0"
