[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_arrays = "0.1.0"
bitflags = "1.3.2"
bitmatch = "0.1.1"
bincode = "1.3.3"
zstd = { version = "0.11.2", default-features = false }
arrayvec = { version = "0.7.2", features = ["serde"] }
gdbstub = "0.6.2"
gdbstub_arch = "0.2.3"
elf_rs = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
zstd = { version = "0.11.2", default-features = false, features = ["wasm"] }
web-sys = { version = "0.3.57", features = ["Storage", "Window"] }
base64 = "0.13.0"
