[package]
name = "gamegirl-egui"
default-run = "gamegirl_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gamegirl_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common", features = ["serde_config", "serde"] }
gamegirl = { path = "../gamegirl", features = ["ggc", "gga", "nds", "serde"] }

eframe = { version = "0.24.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
catppuccin-egui = { git = "https://github.com/catppuccin/egui.git", branch = "main" }

cpal = "0.15.2"
rfd = "0.12.1"
gilrs = { version = "0.10.3", features = ["serde-serialize"] }
futures-executor = "0.3.29"
env_logger = "0.10.1"

log.workspace = true
serde.workspace = true

once_cell = { version = "*", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.39"
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }

# Disable the threaded PPU, wasm doesn't support std::thread
gga = { path = "../cores/gga", default-features = false }
nds = { path = "../cores/nds", default-features = false }

[features]
default = ["remote-debugger"]
remote-debugger = ["gamegirl/remote-debugger", "once_cell"]
