[package]
name = "gamegirl-egui"
default-run = "gamegirl_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gamegirl_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common", features = ["serde_config"] }
gamegirl = { path = "../gamegirl", features = ["ggc", "gga", "psx", "dynamic"] }

eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
catppuccin-egui = { git = "https://github.com/catppuccin/egui.git", branch = "main" }

cpal = "0.15.3"
rfd = "0.14.0"
gilrs = { version = "0.10.5", features = ["serde-serialize"] }
futures-executor = "0.3.30"
env_logger = "0.11.3"

log.workspace = true
serde.workspace = true

once_cell = { version = "*", optional = true }
hqx = { git = "https://github.com/CryZe/wasmboy-rs", tag = "v0.1.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.42"
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }

[features]
default = ["savestates", "filters"]
savestates = ["common/serde", "gamegirl/serde"]
remote-debugger = ["gamegirl/remote-debugger", "once_cell"]
filters = ["hqx"]
dynamic = ["gamegirl/dynamic"]
