[package]
name = "gamegirl-egui"
default-run = "gamegirl_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gamegirl_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common", features = ["serde_config"] }
gamegirl = { path = "../gamegirl", features = ["ggc", "gga", "nes"] }

egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }

cpal = "0.15.3"
rfd = "0.14.1"
gilrs = { version = "0.10.8", features = ["serde-serialize"] }

log.workspace = true
serde.workspace = true

once_cell = { version = "*", optional = true }
hqx = { git = "https://github.com/CryZe/wasmboy-rs", tag = "v0.1.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.3"
futures-executor = "0.3.30"
common = { path = "../common", features = ["zstd"] }
gamegirl = { path = "../gamegirl", features = ["psx"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.42"
cpal = { version = "0.15.3", features = ["wasm-bindgen"] }
web-sys = "0.3.4"

[features]
default = ["savestates", "filters"]
savestates = ["common/serde", "gamegirl/serde"]
remote-debugger = ["gamegirl/remote-debugger", "once_cell"]
filters = ["hqx"]
dynamic = ["gamegirl/dynamic"]
