[package]
name = "gamegirl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
common = { path = "../common" }
ggc = { path = "../cores/ggc", optional = true }
gga = { path = "../cores/gga", optional = true }
nds = { path = "../cores/nds", optional = true }
psx = { path = "../cores/psx", optional = true }
nes = { path = "../cores/nes", optional = true }
log = "0.4.21"

gdbstub = { version = "0.7.1", optional = true }
gdbstub_arch = { version = "0.3.0", optional = true }
glow.workspace = true

libloading = { version = "0.8", optional = true }
notify = { version = "6.1.1", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
zstd = { version = "0.13.0", default-features = false, features = ["wasm"] }
web-sys = { version = "0.3.69", features = ["Storage", "Window"] }
base64 = "0.22.0"

[features]
serde = [
    "common/serde",
    "ggc/serde",
    "gga/serde",
    "nes/serde",
    "psx/serde",
]
remote-debugger = ["dep:gdbstub", "dep:gdbstub_arch"]
dynamic = ["dep:libloading", "dep:notify"]
