[package]
name = "arm-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
bitmatch = "0.1.1"
log = "0.4.17"

serde = { version = "1.0.140", features = ["derive", "rc"], optional = true }

[features]
serde = ["dep:serde"]
instruction-tracing = []
