[package]
name = "arm-cpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }

log.workspace = true
serde = { workspace = true, optional = true }
bitmatch.workspace = true
num-traits = "0.2"
num-derive = "0.4"

cranelift = "0.118"
cranelift-jit = "0.118"
cranelift-module = "0.118"
cranelift-native = "0.118"

[features]
serde = ["dep:serde"]
