[package]
name = "psg-apu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"

serde = { version = "1.0.188", features = ["derive", "rc"], optional = true }

[features]
serde = ["dep:serde"]
instruction-tracing = []
