[package]
name = "gga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
arm-cpu = { path = "../../components/arm-cpu" }
gga-ppu = { path = "../../components/gga-ppu" }
psg-apu = { path = "../../components/psg-apu" }

serde = { version = "1.0.188", features = ["derive", "rc"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
arrayvec = { version = "0.7.4" }
log = "0.4.20"

elf_rs = "0.3.0"


[features]
default = []
threaded-ppu = ["gga-ppu/threaded"]
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "arrayvec/serde",
    "common/serde",
    "arm-cpu/serde",
    "gga-ppu/serde",
    "psg-apu/serde",
]
