[package]
name = "gga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
arm-cpu = { path = "../../components/arm-cpu" }
gga-ppu = { path = "../../components/gga-ppu" }
psg-apu = { path = "../../components/psg-apu" }

log.workspace = true
serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }
arrayvec.workspace = true
modular-bitfield.workspace = true

elf_rs = "0.3.1"
rubato = "0.15.0"


[features]
default = []
threaded-ppu = ["gga-ppu/threaded"]
serde = [
    "dep:serde",
    "dep:serde_arrays",
    "arrayvec/serde",
    "common/serde",
    "arm-cpu/serde",
    "gga-ppu/serde",
    "psg-apu/serde",
]
