[package]
name = "nds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
arm-cpu = { path = "../../components/arm-cpu" }
gga-ppu = { path = "../../components/gga-ppu" }

serde = { version = "1.0.140", features = ["derive", "rc"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
log = "0.4.17"


[features]
default = ["threaded-ppu"]
threaded-ppu = ["gga-ppu/threaded"]
serde = ["dep:serde", "dep:serde_arrays", "common/serde", "arm-cpu/serde", "gga-ppu/serde"]
