[package]
name = "nds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
arm-cpu = { path = "../../components/arm-cpu" }

log.workspace = true
serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }
arrayvec.workspace = true
modular-bitfield.workspace = true

[features]
default = []
serde = ["dep:serde", "dep:serde_arrays", "common/serde", "arm-cpu/serde"]
