[package]
name = "psx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }

serde = { version = "1.0.188", features = ["derive", "rc"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }
log = "0.4.20"
modular-bitfield = "0.11"
bitmatch = "0.1.1"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_arrays", "common/serde"]
