[package]
name = "psx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }

arrayvec.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }
serde_arrays = { workspace = true, optional = true }
modular-bitfield.workspace = true
bitmatch.workspace = true
glow.workspace = true


[features]
serde = ["dep:serde", "dep:serde_arrays", "common/serde"]
