[package]
name = "corebench-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
gamegirl = { path = "../../gamegirl", features = ["dynamic", "ggc", "gga"] }
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui_plot = "0.28"
libloading = "0.8"
env_logger = "0.11.3"
rfd = "0.14.1"
futures-executor = "0.3.30"
walkdir = "2"
