[package]
name = "tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
arm-cpu = { path = "../../components/arm-cpu", features = ["instruction-tracing"] }
gga = { path = "../../cores/gga" }
env_logger = "0.10.1"
